fixing animation issues on mobile

--- a/style.css
+++ b/style.css
@@ -477,25 +477,25 @@ input:checked + .switch-left + .switch-right::before {
 
 @-webkit-keyframes zoom-in-zoom-out {
   0% {
-    transform: rotateY(180deg) scale(1, 1);
+    transform: scale(1, 1) rotateY(180deg);
   }
   50% {
-    transform: rotateY(180deg) scale(1.1, 1.1);
+    transform: scale(1.1, 1.1) rotateY(180deg);
   }
   100% {
-    transform: rotateY(180deg) scale(1, 1);
+    transform: scale(1, 1) rotateY(180deg);
   }
 }
 
 @keyframes zoom-in-zoom-out {
   0% {
-    transform: rotateY(180deg) scale(1, 1);
+    transform: scale(1, 1) rotateY(180deg);
   }
   50% {
-    transform: rotateY(180deg) scale(1.1, 1.1);
+    transform: scale(1.1, 1.1) rotateY(180deg);
   }
   100% {
-    transform: rotateY(180deg) scale(1, 1);
+    transform: scale(1, 1) rotateY(180deg);
   }
 }
 
@@ -550,6 +550,7 @@ input:checked + .switch-left + .switch-right::before {
 .memory-card.flip {
   transform: rotateY(180deg);
 }
+
 .memory-card.flip_reset {
   transform: rotate(360deg);
   transition: transform 0s;
